AAE-22075 tentative with DSL filters